# cobalt-s3-archiver

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  deny.toml  docker-compose.yml
.github/workflows/: tests.yml
licenses/: licenses.html
scripts/: dummy.sh  example.sh
src/: aws.rs  checksum.rs  counter.rs  lib.rs  list.rs  main_cli.rs
src/s3-archiver/: Cargo.toml
src/s3-archiver/src/: aws.rs  lib.rs  main_cli.rs
src/s3-archiver/tests/: test_aws.rs  test_cli.rs  test_lib.rs
src/s3-archiver/tests/common/: mod.rs
tests/: test_aws.rs  test_cli.rs  test_lib.rs
tests/common/: mod.rs
