[package]
name = "cobalt-s3-archiver"
version = "0.2.0"
edition = "2021"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
publish = true
description = "A library and CLI tool to create and validate ZIP archives in S3"
repository = "https://github.com/harrison-ai/cobalt-s3-archiver"
keywords = [ "s3", "compression", "zip", "archive" ]
categories = ["command-line-utilities", "compression"]
rust-version = "1.65"
license = "Apache-2.0"

include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
    "licenses/licenses.html",
]

[features]
default = []

test_containers = []

[dependencies]
anyhow = "1"
async_zip = { version = "0.0.17" }
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
bytesize = "1.1.0"
clap = { version = "4.1.1", features = ["derive"] }
cobalt-aws = "0.9.2"
cobalt-async = { version = "0.4.0", features = ["checksum"]}
futures = "0.3.25"
pin-project-lite = "0.2.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
url = { version = "2.3.1", features = ["serde"] }
bytes = "1.3.0"
typed-builder = "0.11.0"
async-trait = "0.1.61"
crc32fast = "1.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio-stream = { version = "0.1.11", features = ["io-util"] }

[[bin]]
name = "s3-archiver-cli"
path = "src/main_cli.rs"

[lib]
name = "cobalt_s3_archiver"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2.0.8"
function_name = "0.3.0"
predicates = "2.1.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
testcontainers = "0.14.0"
tokio-test = "0.4.2"


